<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	>
		
	<ScrollView
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"	
		android:scrollbars="vertical"
		>	
		<!-- this is focusable to start with view focus here! -->
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:padding="10dip"
			android:orientation="vertical"
			android:focusable="true" android:focusableInTouchMode="true"
			>
		
			
			<TableLayout 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10dip"
				>
				<TableRow>
					<TextView android:text="@string/nickname_caption" android:paddingRight="10dip" android:gravity="right|center_vertical" android:textAppearance="?android:attr/textAppearanceMedium" />
					<EditText android:id="@+id/textNicknameBookmark" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1" />
				</TableRow>
				
				<TableRow>
					<TextView android:text="@string/address_caption" android:hint="localhost" android:paddingRight="10dip" android:gravity="right|center_vertical" android:textAppearance="?android:attr/textAppearanceMedium" />
					<EditText android:id="@+id/textIPBookmark" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1" />
				</TableRow>
				<TableRow>
					<TextView android:text="@string/port_caption" android:paddingRight="10dip" android:gravity="right|center_vertical" android:textAppearance="?android:attr/textAppearanceMedium" />
					<EditText android:id="@+id/textPORTBookmark"
						android:text="5900"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1" />
				</TableRow>
				<TableRow>
					<TextView android:text="@string/username_caption" android:paddingRight="10dip" android:gravity="right|center_vertical" android:textAppearance="?android:attr/textAppearanceMedium" />
					<EditText android:layout_width="fill_parent" android:hint="@string/username_hint" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1" android:id="@+id/textUsernameBookmark"/>
				</TableRow>
				<TableRow>
					<TextView android:text="@string/password_caption" android:paddingRight="10dip" android:gravity="right|center_vertical" android:textAppearance="?android:attr/textAppearanceMedium" />
					<LinearLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:layout_weight="1"
						>
						<EditText android:id="@+id/textPASSWORDBookmark"
							android:password="true"
							android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1" />
						<CheckBox android:id="@+id/checkboxKeepPasswordBookmark"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/keep_password_button"
							android:layout_weight="0"
						/>
					</LinearLayout>
				</TableRow>

				<TableRow>
					<TextView android:text="@string/repeater_caption" android:paddingRight="10dip" android:gravity="right|center_vertical" android:textAppearance="?android:attr/textAppearanceMedium" />
					<EditText android:layout_width="fill_parent" android:hint="@string/repeater_hint" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1" android:id="@+id/textRepeaterIdBookmark"/>
				</TableRow>
				    
			</TableLayout>
			<!-- 
			<TextView
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:layout_gravity="left|center_vertical"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/color_format_caption"
			/>
			<Spinner 
			    android:id="@+id/colorformat" 
			    android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			/>
			-->
			
			<!-- 
			<LinearLayout
				android:orientation="horizontal"
				android:padding="10dp"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>
				<TextView
					android:text="@string/force_full_check"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					/> 
				<RadioGroup
					android:id="@+id/groupForceFullScreen"
					android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					>
					<RadioButton
						android:id="@+id/radioForceFullScreenAuto"
					    android:text="@string/auto"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					/>
					<RadioButton
						android:id="@+id/radioForceFullScreenOn"
					    android:text="@string/on"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					/>
					<RadioButton
						android:id="@+id/radioForceFullScreenOff"
					    android:text="@string/off"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					/>
				</RadioGroup>
			</LinearLayout>
			 -->
			
			    	
			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>
		    <Button
					android:id="@+id/buttonSaveBookmark"
					android:text="@string/savebookmark_button"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					/>
		       
		     <Button 
					android:id="@+id/buttonCancelBookmark" 
					android:text="@android:string/cancel"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					/>
			     
		     </LinearLayout>
		     
		 </LinearLayout>
		       	       
	</ScrollView>
</LinearLayout>